# Proteus

./: .claude-followup-6.md  .claude-followup-98.md  .claude-prompt-27.md  .followup-94.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASES.md  SECURITY.md  err.txt  justfile  pixi.toml  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  branch-protection.main.json
.github/rulesets/: main-merge-queue.json
.github/workflows/: _required.yml  apply-branch-protection.yml  ci.yml  codeql.yml  cross-repo-dispatch.yml  dispatch-failure-alert.yml  promote.yml  release.yml
configs/: allowed-hosts.txt
configs/pipelines/: achaean-fleet.yaml  schema.json
dagger/: jest.config.js  package-lock.json  package.json
dagger/src/: index.ts
dagger/tests/: pipeline.test.ts
docs/: backwards-compat.md  branch-protection.md  cross-repo-dispatch-contract.md  dispatch-contract.md  milestones.md  releases.md
docs/audit-2026-04-28/: classic-protection-after-94.json  remediation-plan.md  (+1 more)
proteus/: models.py
schemas/: pipeline.schema.json
scripts/: activate-merge-queue.sh  apply-branch-protection.sh  audit-main-ruleset.sh  branch-protection-apply.sh  dispatch-apply.sh  validate-host.sh  verify-branch-protection.sh
tests/: README.md  branch-protection.test.sh  dispatch-apply.test.sh  merge-queue-activation.test.sh  test-required-checks-ruleset.sh  test_handlers.py  test_loader.py  test_main_integration.py  test_topology.py
(+31 files in other folders)
